more tweaks trying to include math properly

--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -3,4 +3,4 @@ layout: default
 title: "The first pattern"
 permalink: /P1/
 ---
-This is the first pattern and check "making things happen" to see if $\alpha$!
+This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$
