another tweak for math

--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -3,4 +3,8 @@ layout: default
 title: "The first pattern"
 permalink: /P1/
 ---
-This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$
+This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
+
+so this $$ y = \alpha  | \beta $$ was rendered,
+
+but this $ \alpha $ was not!
