--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -8,3 +8,5 @@ This is the first pattern and check "making things happen" to see if $\alpha$! o
 so this $$ y = \alpha  | \beta $$ was rendered,
 
 but this $ \alpha $ was not!
+
+It is suggested to use $\vert$ or $$\vert$$ as the pipe symbol.
