--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -11,4 +11,4 @@ but this $ \alpha $ was not!
 
 It is suggested to use $\vert$ or $$\vert$$ as the pipe symbol.
 
-so are you working now?
+And here we try again in the next day
