--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -1,14 +1,16 @@
 ---
 layout: page
 title: "The first pattern"
-permalink: /P1/
+permalink: /:title
 ---
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
-so this $$ y = \alpha  | \beta $$ was rendered,
+so this $$ y = \alpha + \beta $$ was rendered,
 
 but this $ \alpha $ was not!
 
-It is suggested to use $\vert$ or $$\vert$$ as the pipe symbol.
+It is suggested to use $\vert$ or $$\vert$$ as the pipe ($|$) symbol.
 
-And here we try again in the next day
+And here we try again in the next day.
+
+This seems to work with some drawbacks!
