try to add images and use title as a variable in the p1 pattern front matter

--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "The first pattern"
-permalink: /:title
+permalink: page.title
 ---
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
@@ -9,6 +9,6 @@ so this $$ y = \alpha + \beta $$ was rendered,
 
 but this $ \alpha $ was not!
 
-It is suggested to use $\vert$ or $$\vert$$ as the pipe ($|$) symbol.
+It is suggested to use $\vert$ or $$\vert$$ as the pipe symbol.
 
-This seems to work with some drawbacks --- Come ooon!
+This seems to work with some drawbacks --- now we need to get rid of the pipes!
