--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "The first pattern"
-permalink: page.title
+permalink: /:title/
 ---
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
@@ -12,3 +12,5 @@ but this $ \alpha $ was not!
 It is suggested to use $\vert$ or $$\vert$$ as the pipe symbol.
 
 This seems to work with some drawbacks --- now we need to get rid of the pipes!
+
+now we modified the permalink
