re-add footer.html

--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "The first pattern"
-permalink: /:title/
+permalink: /first-pattern
 ---
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
