modigy base url in the config file

--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -2,6 +2,8 @@
 layout: page
 title: "The first pattern"
 ---
+Here comes the dawn of patterns!
+
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
 so this $$ y = \alpha + \beta $$ was rendered,
