--- a/_pages/03_P1.md
+++ b/_pages/03_P1.md
@@ -2,7 +2,7 @@
 layout: page
 title: "The first pattern"
 ---
-Here comes the dawn of patterns!
+Here comes the dawn of patterns! - meh
 
 This is the first pattern and check "making things happen" to see if $\alpha$! or $$ y = \alpha + \beta x $$....
 
